--- a/src/styles/components/_storm-icon.scss
+++ b/src/styles/components/_storm-icon.scss
@@ -1,3 +1,7 @@
 .storm-icon {
   vertical-align: text-bottom;
+
+  &--magnifying-glass {
+    fill: #666e7d;
+  }
 }
